--- a/.config
+++ b/.config
@@ -1574,25 +1574,7 @@ CONFIG_MEDIA_SUPPORT=y
 #
 # Multimedia drivers
 #
-CONFIG_RC_CORE=y
-CONFIG_LIRC=y
-CONFIG_RC_MAP=m
-CONFIG_IR_NEC_DECODER=m
-CONFIG_IR_RC5_DECODER=m
-CONFIG_IR_RC6_DECODER=m
-CONFIG_IR_JVC_DECODER=m
-CONFIG_IR_SONY_DECODER=m
-CONFIG_IR_RC5_SZ_DECODER=m
-CONFIG_IR_SANYO_DECODER=m
-CONFIG_IR_MCE_KBD_DECODER=m
-CONFIG_IR_LIRC_CODEC=m
-# CONFIG_RC_ATI_REMOTE is not set
-# CONFIG_IR_IMON is not set
-# CONFIG_IR_MCEUSB is not set
-# CONFIG_IR_REDRAT3 is not set
-# CONFIG_IR_STREAMZAP is not set
-# CONFIG_RC_LOOPBACK is not set
-CONFIG_IR_GPIO_CIR=m
+# CONFIG_RC_CORE is not set
 CONFIG_VIDEO_SUNXI_CEDAR=m
 CONFIG_VIDEO_DECODER_SUNXI=m
 CONFIG_VIDEO_AVS_COUNTER=m
@@ -1736,25 +1718,25 @@ CONFIG_USB_HID=y
 #
 # Special HID drivers
 #
-CONFIG_HID_A4TECH=y
+# CONFIG_HID_A4TECH is not set
 # CONFIG_HID_ACRUX is not set
-CONFIG_HID_APPLE=y
-CONFIG_HID_BELKIN=y
-CONFIG_HID_CHERRY=y
-CONFIG_HID_CHICONY=y
+# CONFIG_HID_APPLE is not set
+# CONFIG_HID_BELKIN is not set
+# CONFIG_HID_CHERRY is not set
+# CONFIG_HID_CHICONY is not set
 # CONFIG_HID_PRODIKEYS is not set
-CONFIG_HID_CYPRESS=y
+# CONFIG_HID_CYPRESS is not set
 # CONFIG_HID_DRAGONRISE is not set
 # CONFIG_HID_EMS_FF is not set
-CONFIG_HID_EZKEY=y
+# CONFIG_HID_EZKEY is not set
 # CONFIG_HID_HOLTEK is not set
 # CONFIG_HID_KEYTOUCH is not set
-CONFIG_HID_KYE=y
+# CONFIG_HID_KYE is not set
 # CONFIG_HID_UCLOGIC is not set
 # CONFIG_HID_WALTOP is not set
 # CONFIG_HID_GYRATION is not set
 # CONFIG_HID_TWINHAN is not set
-CONFIG_HID_KENSINGTON=y
+# CONFIG_HID_KENSINGTON is not set
 # CONFIG_HID_LCPOWER is not set
 CONFIG_HID_LOGITECH=y
 CONFIG_HID_LOGITECH_DJ=m
@@ -1763,7 +1745,7 @@ CONFIG_HID_LOGITECH_DJ=m
 # CONFIG_LOGIG940_FF is not set
 # CONFIG_LOGIWHEELS_FF is not set
 CONFIG_HID_MICROSOFT=y
-CONFIG_HID_MONTEREY=y
+# CONFIG_HID_MONTEREY is not set
 # CONFIG_HID_MULTITOUCH is not set
 # CONFIG_HID_NTRIG is not set
 # CONFIG_HID_ORTEK is not set
